kubernetes/main/apps/downloads/prowlarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

  egress:
    - toEndpoints: # sabnzbd
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: drunkenslug.com      # linux isos
        - matchName: prowlarr.servarr.com # update checking
        - matchName: indexers.prowlarr.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
